Add characteristics to reference

--- a/APITaxi/templates/documentation/reference.html
+++ b/APITaxi/templates/documentation/reference.html
@@ -251,5 +251,81 @@ This section describes the different values a hail status can take.
 <br>
 <img src="/static/images/enums_hails.png">
 
+<h1>Véhicule</h1>
 
+<h2>Characteristics</h2>
+<table>
+    <tr>
+        <td>Value</td>
+        <td>Desription</td>
+    </tr>
+    <tr>
+        <td>special_need_vehicle</td>
+        <td>This vehicle accepts people with special needs</td>
+    </tr>
+    <tr>
+        <td>every_destination</td>
+        <td>This taxi accepts to go everywhere</td>
+    </tr>
+    <tr>
+        <td>gps</td>
+        <td>This taxi has a GPS</td>
+    </tr>
+    <tr>
+        <td>eletronic_tool</td>
+        <td>This vehicle has an eletronic tool device</td>
+    </tr>
+    <tr>
+        <td>air_con</td>
+        <td>This vehicle has air conditionnedd</td>
+    </tr>
+    <tr>
+        <td>pet_accepted</td>
+        <td>This vehicle accepts pets</td>
+    </tr>
+    <tr>
+        <td>bike_accepted</td>
+        <td>This vehicle accepts bikes</td>
+    </tr>
+    <tr>
+        <td>baby_seat</td>
+        <td>This vehicle has a baby seat</td>
+    </tr>
+    <tr>
+        <td>wifi</td>
+        <td>This vehicle has wifi aboard</td>
+    </tr>
+    <tr>
+        <td>tablet</td>
+        <td>This vehicle has a tablet which can be used by the customer</td>
+    </tr>
+    <tr>
+        <td>dvd_player</td>
+        <td>This vehicle has a dvd player which can be used by the customer</td>
+    </tr>
+    <tr>
+        <td>fresh_drink</td>
+        <td>This vehicle offers a fresh drink to the client</td>
+    </tr>
+    <tr>
+        <td>amex_accepted</td>
+        <td>This vehicle accepts american express card</td>
+    </tr>
+    <tr>
+        <td>bank_check_accepted</td>
+        <td>This vehicle accepts bank checks</td>
+    </tr>
+    <tr>
+        <td>nfc_cc_accepted</td>
+        <td>This vehicle accepts nfc credit card payments</td>
+    </tr>
+    <tr>
+        <td>credit_card_accepted</td>
+        <td>This vehicle accepts credit card payments</td>
+    </tr>
+    <tr>
+        <td>luxury</td>
+        <td>This is a luxury vehicle</td>
+    </tr>
+</table>
 {% endblock %}
