documetation translation (WIP)

--- a/APITaxi/templates/documentation/base.html
+++ b/APITaxi/templates/documentation/base.html
@@ -16,31 +16,31 @@ margin-bottom: 0;
      <div id="sidebar-wrapper">
                 <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="/documentation/index">Vue d'ensemble</a>
+                    <a href="/documentation/index">Overview</a>
                 </li>
                 <ul>
                 <li>
-                    <a href="/documentation/index#headers">Entêtes HTTP obligatoires</a>
+                    <a href="/documentation/index#headers">Mandatory HTTP headers</a>
                 </li>
                 <li>
-                    <a href="/documentation/index#authentication">Authentification</a>
+                    <a href="/documentation/index#authentication">Authentication</a>
                 </li>
                 </ul>
                 <li class="sidebar-brand">
-                    <a href="moteur">Moteur</a>
+                    <a href="moteur">Search engine</a>
                 </li>
                 <ul>
                 <li>
-                    <a href="/documentation/moteur#geoloc">Rechercher des taxis</a>
+                    <a href="/documentation/moteur#geoloc">Looking for taxis</a>
                 </li>
                 <li>
-                    <a href="/documentation/moteur#post_hail">Créer une course</a>
+                    <a href="/documentation/moteur#post_hail">Creating a Hail</a>
                 </li>
                 <li>
-                    <a href="/documentation/moteur#get_hail">Suivre le statut d'une course</a>
+                    <a href="/documentation/moteur#get_hail">Querying a Hail status</a>
                 </li>
                 <li>
-                    <a href="/documentation/moteur#put_hail">Mettre à jour une course</a>
+                    <a href="/documentation/moteur#put_hail">Updating a Hail</a>
                 </li>
                 </ul>
                 <li class="sidebar-brand">
