--- a/APITaxi/templates/documentation/index.html
+++ b/APITaxi/templates/documentation/index.html
@@ -1,47 +1,47 @@
 {% extends "documentation/base.html" %}
 {% block documentationcontent %}
-<h1>Vue d'ensemble</h1>
+<h1>Overview</h1>
 
-<h2>Interactions moteur &#8644; operateur &#8644; taxi</h2>
-L'objectif du Registre Géolocalisé des Taxis (RGT) est de mettre en relation les clients des moteurs de recherche et des taxis outillés par des opérateurs de taxis. Pour ce faire, le RGT sert d'intermédiaire entre les moteurs de recherche et les opérateurs de taxis. <br>
-Afin de garantir une fiabilité maximale, la communication de la position et de la disponibilité des taxis doit être faite <em>directement</em> depuis un équipement embarqué dans le taxi vers le RGT. Toutes les autres interactions avec le RGT peuvent être faites depuis les infrastructures centrales des opérateurs de taxis (resp. des moteurs de recherche).
+<h2>client &#8644; search engine &#8644; RGT &#8644; operator &#8644; taxi</h2>
+The French "<b>Registre Géolocalisé des Taxis</b>" (RGT) aims to connect taxis and their clients. Clients can use taxis <b>search engines</b> to hail taxis geolocated by taxis <b>operators</b>. The RGT mediates between search engines and operators. <br>
+In order to ensure maximum reliability, communication of the location and availability of taxis must be made directly from an on-board equipment in the taxi to the RGT. All other interactions with the RGT can be made from the central infrastructure of taxi operators (resp. search engines).
 
 
-<h2>Mise en oeuvre de l'API</h2>
-Toutes les API présententées ici, à l'exception de celle permettant la remontée de la géolocalisation du taxi, sont des API web REST sur HTTPS.<br>
-Tous les retours sont encodés en <a href="http://www.json.org" target="_blank">JSON</a>.<br>
+<h2>APIs implementation</h2>
+This documentation provides an overview of the RGT REST APIs. REST APIs provide access to resources (data entities) via URI paths. To use a REST API, your application will make an HTTPS request and parse the response. Your methods will be the standard HTTP methods like GET, PUT and POST. REST APIs operate over HTTPS making it easy to use with any programming language or framework. The input and output format for the RGT REST APIs is <a href="http://www.json.org" target="_blank">JSON</a>.<br>
 
-<a name="headers"><h2>Entêtes HTTP obligatoires</h2></a>
 
-Les entêtes HTTPS suivantes sont attendues dans toutes les requètes à l'API :
+<a name="headers"><h2>Mandatory HTTP Headers</h2></a>
+
+The following HTTP Headers are mandatory for all requests to the RGT REST APIs:
 <table class="table-desc">
     <th>
-        <td><h4>Nom</h3></td>
+        <td><h4>Name</h3></td>
         <td><h4>Description</h3></td>
-        <td><h4>Valeur</h3></td>
+        <td><h4>Value</h3></td>
     </th>
     <tr>
         <td></td>
         <td>Accept</td>
-        <td>Format attendu de la réponse</td>
+        <td>media types which are acceptable for the response</td>
         <td>application/json</td>
     </tr>
     <tr>
         <td></td>
         <td>X-VERSION</td>
-        <td>Version de l'API</td>
-        <td>1</td>
+        <td>Version of the APIs</td>
+        <td>2</td>
     </tr>
     <tr>
         <td></td>
         <td>X-API-KEY</td>
-        <td>Clé d'API</td>
+        <td>API Key</td>
         <td>{{ apikey }}</td>
     </tr>
 </table>
 
-<a name="authentication"><h2>Authentification</h2></a>
-L'authentification lors des appels se fait grâce à l'ajout de l'entête X-API-KEY.<br>
-Elle est disponible sur la <a href="user_key">page "Clé"</a> du menu principal.
+<a name="authentication"><h2>Authentication</h2></a>
+Authentication of your application is done for each query to the RGT by including a HTTP header X-API-KEY.<br>
+API keys are available for accredited developpers on the <a href="user_key">"Clé" page</a> of the main menu.
 
 {% endblock %}
