--- a/APITaxi/templates/documentation/moteur.html
+++ b/APITaxi/templates/documentation/moteur.html
@@ -1,26 +1,31 @@
 {% extends "documentation/base.html" %}
 {% block documentationcontent %}
 <h1>Search Engines</h1>
-There are two main interactions between Taxis Search Engines and the "Registre Géolocalisé des Taxis" (RGT): looking for taxis around a client, and hailing a taxi for a client.<br>
-<b>Warning:</b> conformément à la Charte, il n'est possible de rechercher ou héler un taxi <em>que</em> dans le cadre d'une demande interactive d'un vrai client : toute tentative d'automatisation est proscrite.
+There are two main interactions between <strong>Taxis Search Engines</strong> and the <strong>Taxi Exchange Point (TXP)</strong>: looking for taxis around a client, and hailing a taxi for a client.<br>
+<strong>Warning:</strong> in accordance with the Terms of Service, you are allowed to look for a taxi or hail one <em>only</em> within the context of a real-time interactive demand of a real customer: automation, replay and any other form of mass data gathering is expressly forbidden.
 
 <a name="geoloc"></a><h2>Looking for taxis around a client</h2>
-In order to obtain the list of all taxis available around a client, your application does an HTTPS <a href="https://api.opendatataxi.fr/doc/#!/taxis/get_taxis"><span>GET</span> request on the <em>taxis</em> API</a>.<br>
-That API sends back all the available taxis around the  <span>(lon,lat)</span> location of the client with all their characteristics. Only the taxis who can be hailed by the client are returned (the list is filtered according to the French taxis regulation).
+In order to obtain the list of all taxis available around a client, your application does an HTTPS <a href="https://api.opendatataxi.fr/doc/#!/taxis/get_taxis" target="_blank"><span>GET</span> request on the <em>taxis</em> API</a>.<br>
+That API sends back all the available taxis around the  <span>(lon,lat)</span> location of the client with all their characteristics. Only the taxis that are available and can be hailed by the client are returned (the list is already filtered according to the French taxis regulation).
 
-<h4>Favorite operator<h4>
-Le paramètre <span>favorite_operator</span> permet de spécifier un opérateur préféré. Il permet, pour les taxis ayant recours à plusieurs opérateurs, de privilégier les caractéristiques et la position remontées par l'opérateur spécifié. Si aucune position récente de l'opérateur favori n'est disponible, ou si aucun opérateur favori n'est spécifié, les caractéristiques et la position renvoyées seront celles de l'opérateur ayant positionné le taxi le plus récemment.
+<h4>Favorite operator</h4>
+The optional <em>favorite_operator</em> parameter allows to specify a prefered operator. It is useful for taxis using several operators at the same time (which is expressly allowed by the French law). In that case, it is the description of the taxi and the location recently updated by that <em>favorite_operator</em> that will be returned. If no recent position has been updated by the <em>favorite_operator</em>, or if no favorite_operator is specified in the request, the description of the taxi and location returned are those of the operator who updated the position of the
+taxi most recently.
 
 <a name"post_hail"></a><h2>Hailing a taxi</h2>
-Once you have received the list of all taxis available around a client, you can hail one of those taxis. That Hail is created by doing a <a href="https://api.opendatataxi.fr/doc/#!/hails/post"><span>POST</span> HTTPS request to the  <em>hails</em> API</a>. 
-The JSON object <a href="documentation/reference#hail_object"><span>hail</span></a> to be created has to be in the data section of the request. The initial status of the Hail should be set to <span>emitted</span>.<br>
-In case of success, the response contains the newly created JSON object <a href="documentation/reference#hail_object"><span>hail</span></a>.
+Once you have received the list of all taxis available around a client, you can hail one of those taxis. That Hail is created by doing a <a href="https://api.opendatataxi.fr/doc/#!/hails/post" target="_blank"><span>POST</span> HTTPS request to the  <em>hails</em> API</a>. 
+The JSON object <a href="/documentation/reference#hail_object"><span>hail</span></a> to be created has to be in the data section of the request. The initial status of the Hail should be set to <span>emitted</span>.<br>
+In case of success, the response contains the newly created JSON object <a href="/documentation/reference#hail_object"><span>hail</span></a> including its newly created <em>id</em> which will then be used to query and update the status of the hail.
 
 <a name="get_hail"></a><h2>Querying the status of a hail</h2>
-Le suivi de l'évolution du statut de la course se fait en effectuant un appel HTTPS <a href="https://api.opendatataxi.fr/doc/#!/hails/get_hail_id"><span>GET</span> sur l'api <em>hails</em></a>. L'identifiant de l'objet <a href="https://api.opendatataxi.fr/doc/#!/hails/post"><span>POST</span> sur l'api <em>hails</em></a> se trouve dans la réponse de la requête de création de cet objet (voir <a href="#post_hail">Créer une course</a>).
+In order to keep track of the status of the hail, you can do a <a href="https://api.opendatataxi.fr/doc/#!/hails/get_hail_id" target="_blank"><span>GET</span> HTTPS request to the  <em>hails</em> API</a>.<br>
+The identifier of the hail is the <em>id</em> that was returned in the response of the POST request used to create the hail (see <a href="#post_hail">Hailing a taxi</a>).<br>
+The list of all possible statuses is available in the <a href="/documentation/reference#hail_status">Reference Documentation</a>.
+
 
 <a name="put_hail"></a><h2>Updating a hail</h2>
-Afin de finaliser la mise en relation, le client doit reconfirmer la course après qu'elle a été acceptée par le taxi. Pour cela il faut, lorsque le statut de la course est <span>accepted_by_taxi</span> et avant un délai de 30s, effectuer un appel HTTPS <a href="https://api.opendatataxi.fr/doc/#!/hails/put_hail_id"><span>PUT</span> sur l'api <em>hails</em></a>. 
-Le nouveau statut à envoyer doit être en cas de confirmation de la course par le client <span>accepted_by_client</span> ou bien en cas d'abandon de la mise en relation <span>declined_by_client</span>.
+In order to finalise the transaction, the client has to reconfirm the hail after it is acknowledged by the taxi. It is done through a call of the <a href="https://api.opendatataxi.fr/doc/#!/hails/put_hail_id" target="_blank"><span>PUT</span> HTTPS request to the  <em>hails</em> API</a>.<br>
+The status of the hail has to be <span>accepted_by_taxi</span> before the client is asked to reconfirm. If you don't send a PUT request with either the <span>accepted_by_customer</span> or the <span>declined_by_customer</span> status in the next 30 seconds, the hail will automatically be updated to <span>timeout_customer</span> and the whole transaction be considered cancelled. You do have to check when you do a PUT with the status <span>accepted_by_customer</span> that the status in the response is
+<span>accepted_by_taxi</span> (the taxi is arriving) and not <span>timeout_customer</span> (your reconfirmation arrived too late, the whole transaction had to be canceled).
 
 {% endblock %}
