--- a/APITaxi/templates/documentation/moteur.html
+++ b/APITaxi/templates/documentation/moteur.html
@@ -1,31 +1,39 @@
 {% extends "documentation/base.html" %}
+{% block styles %}
+  {{super()}}
+  <style>
+ .menu-moteur ul{
+ height:auto;
+ }
+  </style>
+ {% endblock %}
 {% block documentationcontent %}
-<h1>Search Engines</h1>
+<h2>Search Engines</h2>
 There are two main interactions between <strong>Taxis Search Engines</strong> and the <strong>Taxi Exchange Point (TXP)</strong>: looking for taxis around a client, and hailing a taxi for a client.<br>
 <strong>Warning:</strong> in accordance with the Terms of Service, you are allowed to look for a taxi or hail one <em>only</em> within the context of a real-time interactive demand of a real customer: automation, replay and any other form of mass data gathering is expressly forbidden.
 
-<a name="geoloc"></a><h2>Looking for taxis around a client</h2>
-In order to obtain the list of all taxis available around a client, your application does an HTTPS <a href="https://api.opendatataxi.fr/doc/#!/taxis/get_taxis" target="_blank"><span>GET</span> request on the <em>taxis</em> API</a>.<br>
-That API sends back all the available taxis around the  <span>(lon,lat)</span> location of the client with all their characteristics. Only the taxis that are available and can be hailed by the client are returned (the list is already filtered according to the French taxis regulation).
+<h3 id="geoloc">Looking for taxis around a client</h3>
+In order to obtain the list of all taxis available around a client, your application does an HTTPS <a href="https://api.opendatataxi.fr/doc/#!/taxis/get_taxis" target="_blank"><code>GET</code> request on the <em>taxis</em> API</a>.<br>
+That API sends back all the available taxis around the  <code>(lon,lat)</code> location of the client with all their characteristics. Only the taxis that are available and can be hailed by the client are returned (the list is already filtered according to the French taxis regulation).
 
 <h4>Favorite operator</h4>
 The optional <em>favorite_operator</em> parameter allows to specify a prefered operator. It is useful for taxis using several operators at the same time (which is expressly allowed by the French law). In that case, it is the description of the taxi and the location recently updated by that <em>favorite_operator</em> that will be returned. If no recent position has been updated by the <em>favorite_operator</em>, or if no favorite_operator is specified in the request, the description of the taxi and location returned are those of the operator who updated the position of the
 taxi most recently.
 
-<a name"post_hail"></a><h2>Hailing a taxi</h2>
-Once you have received the list of all taxis available around a client, you can hail one of those taxis. That Hail is created by doing a <a href="https://api.opendatataxi.fr/doc/#!/hails/post" target="_blank"><span>POST</span> HTTPS request to the  <em>hails</em> API</a>. 
-The JSON object <a href="/documentation/reference#hail_object"><span>hail</span></a> to be created has to be in the data section of the request. The initial status of the Hail should be set to <span>emitted</span>.<br>
-In case of success, the response contains the newly created JSON object <a href="/documentation/reference#hail_object"><span>hail</span></a> including its newly created <em>id</em> which will then be used to query and update the status of the hail.
+<h3 id="post_hail">Hailing a taxi</h3>
+Once you have received the list of all taxis available around a client, you can hail one of those taxis. That Hail is created by doing a <a href="https://api.opendatataxi.fr/doc/#!/hails/post_hail" target="_blank"><code>POST</code> HTTPS request to the  <em>hails</em> API</a>. 
+The JSON object <a href="/documentation/reference#hail_object"><code>hail</code></a> to be created has to be in the data section of the request. The initial status of the Hail should be set to <code>emitted</code>.<br>
+In case of success, the response contains the newly created JSON object <a href="/documentation/reference#hail_object"><code>hail</code></a> including its newly created <em>id</em> which will then be used to query and update the status of the hail.
 
-<a name="get_hail"></a><h2>Querying the status of a hail</h2>
-In order to keep track of the status of the hail, you can do a <a href="https://api.opendatataxi.fr/doc/#!/hails/get_hail_id" target="_blank"><span>GET</span> HTTPS request to the  <em>hails</em> API</a>.<br>
+<h3 id="get_hail">Querying the status of a hail</h3>
+In order to keep track of the status of the hail, you can do a <a href="https://api.opendatataxi.fr/doc/#!/hails/get_hail_id" target="_blank"><code>GET</code> HTTPS request to the  <em>hails</em> API</a>.<br>
 The identifier of the hail is the <em>id</em> that was returned in the response of the POST request used to create the hail (see <a href="#post_hail">Hailing a taxi</a>).<br>
 The list of all possible statuses is available in the <a href="/documentation/reference#hail_status">Reference Documentation</a>.
 
 
-<a name="put_hail"></a><h2>Updating a hail</h2>
-In order to finalise the transaction, the client has to reconfirm the hail after it is acknowledged by the taxi. It is done through a call of the <a href="https://api.opendatataxi.fr/doc/#!/hails/put_hail_id" target="_blank"><span>PUT</span> HTTPS request to the  <em>hails</em> API</a>.<br>
-The status of the hail has to be <span>accepted_by_taxi</span> before the client is asked to reconfirm. If you don't send a PUT request with either the <span>accepted_by_customer</span> or the <span>declined_by_customer</span> status in the next 30 seconds, the hail will automatically be updated to <span>timeout_customer</span> and the whole transaction be considered cancelled. You do have to check when you do a PUT with the status <span>accepted_by_customer</span> that the status in the response is
-<span>accepted_by_taxi</span> (the taxi is arriving) and not <span>timeout_customer</span> (your reconfirmation arrived too late, the whole transaction had to be canceled).
+<h3 id="put_hail">Updating a hail</h3>
+In order to finalise the transaction, the client has to reconfirm the hail after it is acknowledged by the taxi. It is done through a call of the <a href="https://api.opendatataxi.fr/doc/#!/hails/put_hail_id" target="_blank"><code>PUT</code> HTTPS request to the  <em>hails</em> API</a>.<br>
+The status of the hail has to be <code>accepted_by_taxi</code> before the client is asked to reconfirm. If you don't send a PUT request with either the <code>accepted_by_customer</code> or the <code>declined_by_customer</code> status in the next 30 seconds, the hail will automatically be updated to <code>timeout_customer</code> and the whole transaction be considered cancelled. You do have to check when you do a PUT with the status <code>accepted_by_customer</code> that the status in the response is
+<code>accepted_by_taxi</code> (the taxi is arriving) and not <code>timeout_customer</code> (your reconfirmation arrived too late, the whole transaction had to be canceled).
 
 {% endblock %}
