--- a/APITaxi/templates/documentation/index.html
+++ b/APITaxi/templates/documentation/index.html
@@ -15,7 +15,7 @@ The French <em>"Registre Géolocalisé des Taxis"</em> is a <strong>Taxi Exchang
 In order to ensure maximum reliability, communication of the location and availability of taxis must be made directly from an on-board equipment in the taxi to the <abbr title="Taxi Exchange Point">TXP</abbr>. All other interactions with the <abbr title="Taxi Exchange Point">TXP</abbr> can be made from the central infrastructure of taxi operators (resp. search engines).
 
 <h3 id="apis">APIs implementation</h3>
-This documentation provides an overview of the <abbr title="Taxi Exchange Point">TXP</abbr> REST APIs. REST APIs provide access to resources (data entities) via URI paths. To use a REST API, your application will make an HTTPS request and parse the response. Your methods will be the standard HTTP methods like GET, PUT and POST. REST APIs operate over HTTPS making it easy to use with any programming language or framework. The input and output format for the <abbr title="Taxi
+This documentation provides an overview of the <abbr title="Taxi Exchange Point">TXP</abbr> REST APIs. REST APIs provide access to resources (data entities) via URI paths. To use a REST API, your application will make an HTTPS request and parse the response. Your methods will be the standard HTTP methods like <code>GET</code>, <code>PUT</code> and <code>POST</code>. REST APIs operate over HTTPS making it easy to use with any programming language or framework. The input and output format for the <abbr title="Taxi
 Exchange Point">TXP</abbr> REST APIs is <a href="http://www.json.org" target="_blank">JSON</a>.<br>
 
 <h3 id="headers">Mandatory HTTP Headers</h3>
@@ -30,17 +30,17 @@ The following HTTP Headers are mandatory for all requests to the <abbr title="Ta
     </thead>
     <tbody>
     <tr>
-        <td>Accept</td>
-        <td>application/json</td>
+        <td><code>Accept</code></td>
+        <td><code>application/json</code></td>
         <td><em>media types which are acceptable for the response</em></td>
     </tr>
     <tr>
-        <td>X-VERSION</td>
-        <td>2</td>
+        <td><code>X-VERSION</code></td>
+        <td><code>2</code></td>
         <td><em>Version of the API</em></td>
     </tr>
     <tr>
-        <td>X-API-KEY</td>
+        <td><code>X-API-KEY</code></td>
         <td>{{ apikey }}</td>
         <td><em>API Key</em></td>
     </tr>
@@ -48,7 +48,7 @@ The following HTTP Headers are mandatory for all requests to the <abbr title="Ta
 </table>
 
 <h3 id="authentication">Authentication</h3>
-Authentication of your application is done for each query to the <abbr title="Taxi Exchange Point">TXP</abbr> by including a HTTP header X-API-KEY.<br>
+Authentication of your application is done for each query to the <abbr title="Taxi Exchange Point">TXP</abbr> by including a HTTP header <code>X-API-KEY</code>.<br>
 API keys are available for accredited developpers on the <a href="/user_key">"Clé" page</a> of the main menu.
 
 {% endblock %}
