--- a/APITaxi/static/css/dash.css
+++ b/APITaxi/static/css/dash.css
@@ -1,18 +1,21 @@
 .chart_container {
     float:left;
-    width: 400px;
+    width: 465px;
 }
 .row_chart {
     width:100%;
 }
 .phantom_chart {
     float: left;
+    width: 200px;
+    padding: 30px;
 }
 
 .ville_chart {
     font-size: 70px;
     margin: 0 auto;
     width: 235px;
+    float: left;
 }
 
 .nb_taxis {
@@ -20,6 +23,8 @@
     font-size: 50px;
     padding: 30px;
     padding-top: 15px;
+    width: 200px;
+    text-align: right;
 }
 
 .chart {
